final/code_opt/y.output
Terminals unused in grammar

   T_LIBRARY
   '<'
   '>'


Grammar

    0 $accept: Q $end

    1 $@1: %empty

    2 Q: $@1 S

    3 S: WHILE S
    4  | IF S
    5  | FOR S
    6  | EXP S
    7  | T_PRINT '(' ITEM ')' T_NL S
    8  | T_CO N S T_CC T_NL S
    9  | error T_NL S
   10  | %empty

   11 $@2: %empty

   12 $@3: %empty

   13 $@4: %empty

   14 WHILE: T_WHILE N $@2 '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

   15 $@5: %empty

   16 $@6: %empty

   17 $@7: %empty

   18 FOR: T_FOR N '(' N FID T_IN RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

   19 $@8: %empty

   20 IF: T_IF N '(' N COND N ')' $@8 N T_CO NIF

   21 NIF: N S T_CC T_NL
   22    | N S T_CC T_NL E

   23 $@9: %empty

   24 E: T_ELSE $@9 N T_CO N S T_CC T_NL

   25 $@10: %empty

   26 EXP: K RELOP K $@10 T_NL

   27 $@11: %empty

   28 EXP: ID ASSIGNOP K $@11 T_NL
   29    | K T_NL

   30 COND: K RELOP K
   31     | ID ASSIGNOP K
   32     | K LOGICOP K
   33     | K

   34 @12: %empty

   35 K: K T_ADD @12 L

   36 @13: %empty

   37 K: K T_SUB @13 L
   38  | L

   39 @14: %empty

   40 L: L T_MUL @14 M

   41 @15: %empty

   42 L: L T_DIV @15 M
   43  | M

   44 @16: %empty

   45 M: M T_MOD @16 O

   46 @17: %empty

   47 M: M T_MMOD @17 O
   48  | O

   49 O: ID
   50  | NUM
   51  | '(' K ')'
   52  | ID '[' INDEX ']'

   53 INDEX: NUM ',' INDEX
   54      | ID ',' INDEX
   55      | NUM
   56      | ID

   57 RELOP: T_LT
   58      | T_GT
   59      | T_EE
   60      | T_LE
   61      | T_GE
   62      | T_NE

   63 ASSIGNOP: T_EQ
   64         | T_LA
   65         | T_RA

   66 LOGICOP: T_AND
   67        | T_OR

   68 RANGE: NUMC ':' NUMC
   69      | T_COPEN VECTOR ')'
   70      | T_SEQOPEN NUM ',' NUM EXTRA ')'
   71      | ID

   72 EXTRA: ',' T_BY '=' NUM
   73      | ',' T_LENGTHOUT '=' NUM
   74      | %empty

   75 VECTOR: ITEM ',' VECTOR
   76       | ITEM

   77 ITEM: NUM
   78     | BOOL
   79     | STR
   80     | PASTE
   81     | ID

   82 PASTE: T_PASTEO '(' PASTEIN ')'

   83 PASTEIN: STR ',' PASTEIN
   84        | ID ',' PASTEIN
   85        | %empty

   86 N: T_NL
   87  | %empty

   88 NUMC: T_NUM

   89 NUM: T_NUM

   90 BOOL: T_TRUE
   91     | T_FALSE

   92 STR: T_STR

   93 FID: T_ID

   94 ID: T_ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 14 18 20 51 82
')' (41) 7 14 18 20 51 69 70 82
',' (44) 53 54 70 72 73 75 83 84
':' (58) 68
'<' (60)
'=' (61) 72 73
'>' (62)
'[' (91) 52
']' (93) 52
error (256) 9
T_LIBRARY (258)
T_NL (259) 7 8 9 14 18 21 22 24 26 28 29 86
T_PRINT (260) 7
T_WHILE (261) 14
T_FOR (262) 18
T_IF (263) 20
T_IN (264) 18
T_ELSE (265) 24
T_BY (266) 72
T_LENGTHOUT (267) 73
T_PASTEO (268) 82
T_TRUE (269) 90
T_FALSE (270) 91
T_MOD (271) 45
T_MMOD (272) 47
T_NUM (273) 88 89
T_STR (274) 92
T_ID (275) 93 94
T_COPEN (276) 69
T_SEQOPEN (277) 70
T_CO (278) 8 14 18 20 24
T_CC (279) 8 14 18 21 22 24
T_ADD (280) 35
T_SUB (281) 37
T_MUL (282) 40
T_DIV (283) 42
T_GT (284) 58
T_LT (285) 57
T_EQ (286) 63
T_AND (287) 66
T_OR (288) 67
T_LE (289) 60
T_GE (290) 61
T_EE (291) 59
T_NE (292) 62
T_RA (293) 65
T_LA (294) 64


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Q (50)
    on left: 2, on right: 0
$@1 (51)
    on left: 1, on right: 2
S (52)
    on left: 3 4 5 6 7 8 9 10, on right: 2 3 4 5 6 7 8 9 14 18 21 22
    24
WHILE (53)
    on left: 14, on right: 3
$@2 (54)
    on left: 11, on right: 14
$@3 (55)
    on left: 12, on right: 14
$@4 (56)
    on left: 13, on right: 14
FOR (57)
    on left: 18, on right: 5
$@5 (58)
    on left: 15, on right: 18
$@6 (59)
    on left: 16, on right: 18
$@7 (60)
    on left: 17, on right: 18
IF (61)
    on left: 20, on right: 4
$@8 (62)
    on left: 19, on right: 20
NIF (63)
    on left: 21 22, on right: 20
E (64)
    on left: 24, on right: 22
$@9 (65)
    on left: 23, on right: 24
EXP (66)
    on left: 26 28 29, on right: 6
$@10 (67)
    on left: 25, on right: 26
$@11 (68)
    on left: 27, on right: 28
COND (69)
    on left: 30 31 32 33, on right: 14 20
K (70)
    on left: 35 37 38, on right: 26 28 29 30 31 32 33 35 37 51
@12 (71)
    on left: 34, on right: 35
@13 (72)
    on left: 36, on right: 37
L (73)
    on left: 40 42 43, on right: 35 37 38 40 42
@14 (74)
    on left: 39, on right: 40
@15 (75)
    on left: 41, on right: 42
M (76)
    on left: 45 47 48, on right: 40 42 43 45 47
@16 (77)
    on left: 44, on right: 45
@17 (78)
    on left: 46, on right: 47
O (79)
    on left: 49 50 51 52, on right: 45 47 48
INDEX (80)
    on left: 53 54 55 56, on right: 52 53 54
RELOP (81)
    on left: 57 58 59 60 61 62, on right: 26 30
ASSIGNOP (82)
    on left: 63 64 65, on right: 28 31
LOGICOP (83)
    on left: 66 67, on right: 32
RANGE (84)
    on left: 68 69 70 71, on right: 18
EXTRA (85)
    on left: 72 73 74, on right: 70
VECTOR (86)
    on left: 75 76, on right: 69 75
ITEM (87)
    on left: 77 78 79 80 81, on right: 7 75 76
PASTE (88)
    on left: 82, on right: 80
PASTEIN (89)
    on left: 83 84 85, on right: 82 83 84
N (90)
    on left: 86 87, on right: 8 14 18 20 21 22 24
NUMC (91)
    on left: 88, on right: 68
NUM (92)
    on left: 89, on right: 50 53 55 70 72 73 77
BOOL (93)
    on left: 90 91, on right: 78
STR (94)
    on left: 92, on right: 79 83
FID (95)
    on left: 93, on right: 18
ID (96)
    on left: 94, on right: 28 31 49 52 54 56 71 81 84


State 0

    0 $accept: . Q $end

    $default  reduce using rule 1 ($@1)

    Q    go to state 1
    $@1  go to state 2


State 1

    0 $accept: Q . $end

    $end  shift, and go to state 3


State 2

    2 Q: $@1 . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)

    S      go to state 13
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 3

    0 $accept: Q $end .

    $default  accept


State 4

    9 S: error . T_NL S

    T_NL  shift, and go to state 24


State 5

    7 S: T_PRINT . '(' ITEM ')' T_NL S

    '('  shift, and go to state 25


State 6

   14 WHILE: T_WHILE . N $@2 '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 27


State 7

   18 FOR: T_FOR . N '(' N FID T_IN RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 28


State 8

   20 IF: T_IF . N '(' N COND N ')' $@8 N T_CO NIF

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 29


State 9

   89 NUM: T_NUM .

    $default  reduce using rule 89 (NUM)


State 10

   94 ID: T_ID .

    $default  reduce using rule 94 (ID)


State 11

    8 S: T_CO . N S T_CC T_NL S

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 30


State 12

   51 O: '(' . K ')'

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    K    go to state 31
    L    go to state 19
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 13

    2 Q: $@1 S .

    $default  reduce using rule 2 (Q)


State 14

    3 S: WHILE . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 33
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 15

    5 S: FOR . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 34
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 16

    4 S: IF . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 35
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 17

    6 S: EXP . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 36
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 18

   26 EXP: K . RELOP K $@10 T_NL
   29    | K . T_NL
   35 K: K . T_ADD @12 L
   37  | K . T_SUB @13 L

    T_NL   shift, and go to state 37
    T_ADD  shift, and go to state 38
    T_SUB  shift, and go to state 39
    T_GT   shift, and go to state 40
    T_LT   shift, and go to state 41
    T_LE   shift, and go to state 42
    T_GE   shift, and go to state 43
    T_EE   shift, and go to state 44
    T_NE   shift, and go to state 45

    RELOP  go to state 46


State 19

   38 K: L .
   40 L: L . T_MUL @14 M
   42  | L . T_DIV @15 M

    T_MUL  shift, and go to state 47
    T_DIV  shift, and go to state 48

    $default  reduce using rule 38 (K)


State 20

   43 L: M .
   45 M: M . T_MOD @16 O
   47  | M . T_MMOD @17 O

    T_MOD   shift, and go to state 49
    T_MMOD  shift, and go to state 50

    $default  reduce using rule 43 (L)


State 21

   48 M: O .

    $default  reduce using rule 48 (M)


State 22

   50 O: NUM .

    $default  reduce using rule 50 (O)


State 23

   28 EXP: ID . ASSIGNOP K $@11 T_NL
   49 O: ID .
   52  | ID . '[' INDEX ']'

    T_EQ  shift, and go to state 51
    T_RA  shift, and go to state 52
    T_LA  shift, and go to state 53
    '['   shift, and go to state 54

    $default  reduce using rule 49 (O)

    ASSIGNOP  go to state 55


State 24

    9 S: error T_NL . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 56
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 25

    7 S: T_PRINT '(' . ITEM ')' T_NL S

    T_PASTEO  shift, and go to state 57
    T_TRUE    shift, and go to state 58
    T_FALSE   shift, and go to state 59
    T_NUM     shift, and go to state 9
    T_STR     shift, and go to state 60
    T_ID      shift, and go to state 10

    ITEM   go to state 61
    PASTE  go to state 62
    NUM    go to state 63
    BOOL   go to state 64
    STR    go to state 65
    ID     go to state 66


State 26

   86 N: T_NL .

    $default  reduce using rule 86 (N)


State 27

   14 WHILE: T_WHILE N . $@2 '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    $default  reduce using rule 11 ($@2)

    $@2  go to state 67


State 28

   18 FOR: T_FOR N . '(' N FID T_IN RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

    '('  shift, and go to state 68


State 29

   20 IF: T_IF N . '(' N COND N ')' $@8 N T_CO NIF

    '('  shift, and go to state 69


State 30

    8 S: T_CO N . S T_CC T_NL S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    T_CC  reduce using rule 10 (S)

    S      go to state 70
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 31

   35 K: K . T_ADD @12 L
   37  | K . T_SUB @13 L
   51 O: '(' K . ')'

    T_ADD  shift, and go to state 38
    T_SUB  shift, and go to state 39
    ')'    shift, and go to state 71


State 32

   49 O: ID .
   52  | ID . '[' INDEX ']'

    '['  shift, and go to state 54

    $default  reduce using rule 49 (O)


State 33

    3 S: WHILE S .

    $default  reduce using rule 3 (S)


State 34

    5 S: FOR S .

    $default  reduce using rule 5 (S)


State 35

    4 S: IF S .

    $default  reduce using rule 4 (S)


State 36

    6 S: EXP S .

    $default  reduce using rule 6 (S)


State 37

   29 EXP: K T_NL .

    $default  reduce using rule 29 (EXP)


State 38

   35 K: K T_ADD . @12 L

    $default  reduce using rule 34 (@12)

    @12  go to state 72


State 39

   37 K: K T_SUB . @13 L

    $default  reduce using rule 36 (@13)

    @13  go to state 73


State 40

   58 RELOP: T_GT .

    $default  reduce using rule 58 (RELOP)


State 41

   57 RELOP: T_LT .

    $default  reduce using rule 57 (RELOP)


State 42

   60 RELOP: T_LE .

    $default  reduce using rule 60 (RELOP)


State 43

   61 RELOP: T_GE .

    $default  reduce using rule 61 (RELOP)


State 44

   59 RELOP: T_EE .

    $default  reduce using rule 59 (RELOP)


State 45

   62 RELOP: T_NE .

    $default  reduce using rule 62 (RELOP)


State 46

   26 EXP: K RELOP . K $@10 T_NL

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    K    go to state 74
    L    go to state 19
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 47

   40 L: L T_MUL . @14 M

    $default  reduce using rule 39 (@14)

    @14  go to state 75


State 48

   42 L: L T_DIV . @15 M

    $default  reduce using rule 41 (@15)

    @15  go to state 76


State 49

   45 M: M T_MOD . @16 O

    $default  reduce using rule 44 (@16)

    @16  go to state 77


State 50

   47 M: M T_MMOD . @17 O

    $default  reduce using rule 46 (@17)

    @17  go to state 78


State 51

   63 ASSIGNOP: T_EQ .

    $default  reduce using rule 63 (ASSIGNOP)


State 52

   65 ASSIGNOP: T_RA .

    $default  reduce using rule 65 (ASSIGNOP)


State 53

   64 ASSIGNOP: T_LA .

    $default  reduce using rule 64 (ASSIGNOP)


State 54

   52 O: ID '[' . INDEX ']'

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10

    INDEX  go to state 79
    NUM    go to state 80
    ID     go to state 81


State 55

   28 EXP: ID ASSIGNOP . K $@11 T_NL

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    K    go to state 82
    L    go to state 19
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 56

    9 S: error T_NL S .

    $default  reduce using rule 9 (S)


State 57

   82 PASTE: T_PASTEO . '(' PASTEIN ')'

    '('  shift, and go to state 83


State 58

   90 BOOL: T_TRUE .

    $default  reduce using rule 90 (BOOL)


State 59

   91 BOOL: T_FALSE .

    $default  reduce using rule 91 (BOOL)


State 60

   92 STR: T_STR .

    $default  reduce using rule 92 (STR)


State 61

    7 S: T_PRINT '(' ITEM . ')' T_NL S

    ')'  shift, and go to state 84


State 62

   80 ITEM: PASTE .

    $default  reduce using rule 80 (ITEM)


State 63

   77 ITEM: NUM .

    $default  reduce using rule 77 (ITEM)


State 64

   78 ITEM: BOOL .

    $default  reduce using rule 78 (ITEM)


State 65

   79 ITEM: STR .

    $default  reduce using rule 79 (ITEM)


State 66

   81 ITEM: ID .

    $default  reduce using rule 81 (ITEM)


State 67

   14 WHILE: T_WHILE N $@2 . '(' N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    '('  shift, and go to state 85


State 68

   18 FOR: T_FOR N '(' . N FID T_IN RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 86


State 69

   20 IF: T_IF N '(' . N COND N ')' $@8 N T_CO NIF

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 87


State 70

    8 S: T_CO N S . T_CC T_NL S

    T_CC  shift, and go to state 88


State 71

   51 O: '(' K ')' .

    $default  reduce using rule 51 (O)


State 72

   35 K: K T_ADD @12 . L

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    L    go to state 89
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 73

   37 K: K T_SUB @13 . L

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    L    go to state 90
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 74

   26 EXP: K RELOP K . $@10 T_NL
   35 K: K . T_ADD @12 L
   37  | K . T_SUB @13 L

    T_ADD  shift, and go to state 38
    T_SUB  shift, and go to state 39

    $default  reduce using rule 25 ($@10)

    $@10  go to state 91


State 75

   40 L: L T_MUL @14 . M

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    M    go to state 92
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 76

   42 L: L T_DIV @15 . M

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    M    go to state 93
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 77

   45 M: M T_MOD @16 . O

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    O    go to state 94
    NUM  go to state 22
    ID   go to state 32


State 78

   47 M: M T_MMOD @17 . O

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    O    go to state 95
    NUM  go to state 22
    ID   go to state 32


State 79

   52 O: ID '[' INDEX . ']'

    ']'  shift, and go to state 96


State 80

   53 INDEX: NUM . ',' INDEX
   55      | NUM .

    ','  shift, and go to state 97

    $default  reduce using rule 55 (INDEX)


State 81

   54 INDEX: ID . ',' INDEX
   56      | ID .

    ','  shift, and go to state 98

    $default  reduce using rule 56 (INDEX)


State 82

   28 EXP: ID ASSIGNOP K . $@11 T_NL
   35 K: K . T_ADD @12 L
   37  | K . T_SUB @13 L

    T_ADD  shift, and go to state 38
    T_SUB  shift, and go to state 39

    $default  reduce using rule 27 ($@11)

    $@11  go to state 99


State 83

   82 PASTE: T_PASTEO '(' . PASTEIN ')'

    T_STR  shift, and go to state 60
    T_ID   shift, and go to state 10

    $default  reduce using rule 85 (PASTEIN)

    PASTEIN  go to state 100
    STR      go to state 101
    ID       go to state 102


State 84

    7 S: T_PRINT '(' ITEM ')' . T_NL S

    T_NL  shift, and go to state 103


State 85

   14 WHILE: T_WHILE N $@2 '(' . N COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 104


State 86

   18 FOR: T_FOR N '(' N . FID T_IN RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

    T_ID  shift, and go to state 105

    FID  go to state 106


State 87

   20 IF: T_IF N '(' N . COND N ')' $@8 N T_CO NIF

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    COND  go to state 107
    K     go to state 108
    L     go to state 19
    M     go to state 20
    O     go to state 21
    NUM   go to state 22
    ID    go to state 109


State 88

    8 S: T_CO N S T_CC . T_NL S

    T_NL  shift, and go to state 110


State 89

   35 K: K T_ADD @12 L .
   40 L: L . T_MUL @14 M
   42  | L . T_DIV @15 M

    T_MUL  shift, and go to state 47
    T_DIV  shift, and go to state 48

    $default  reduce using rule 35 (K)


State 90

   37 K: K T_SUB @13 L .
   40 L: L . T_MUL @14 M
   42  | L . T_DIV @15 M

    T_MUL  shift, and go to state 47
    T_DIV  shift, and go to state 48

    $default  reduce using rule 37 (K)


State 91

   26 EXP: K RELOP K $@10 . T_NL

    T_NL  shift, and go to state 111


State 92

   40 L: L T_MUL @14 M .
   45 M: M . T_MOD @16 O
   47  | M . T_MMOD @17 O

    T_MOD   shift, and go to state 49
    T_MMOD  shift, and go to state 50

    $default  reduce using rule 40 (L)


State 93

   42 L: L T_DIV @15 M .
   45 M: M . T_MOD @16 O
   47  | M . T_MMOD @17 O

    T_MOD   shift, and go to state 49
    T_MMOD  shift, and go to state 50

    $default  reduce using rule 42 (L)


State 94

   45 M: M T_MOD @16 O .

    $default  reduce using rule 45 (M)


State 95

   47 M: M T_MMOD @17 O .

    $default  reduce using rule 47 (M)


State 96

   52 O: ID '[' INDEX ']' .

    $default  reduce using rule 52 (O)


State 97

   53 INDEX: NUM ',' . INDEX

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10

    INDEX  go to state 112
    NUM    go to state 80
    ID     go to state 81


State 98

   54 INDEX: ID ',' . INDEX

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10

    INDEX  go to state 113
    NUM    go to state 80
    ID     go to state 81


State 99

   28 EXP: ID ASSIGNOP K $@11 . T_NL

    T_NL  shift, and go to state 114


State 100

   82 PASTE: T_PASTEO '(' PASTEIN . ')'

    ')'  shift, and go to state 115


State 101

   83 PASTEIN: STR . ',' PASTEIN

    ','  shift, and go to state 116


State 102

   84 PASTEIN: ID . ',' PASTEIN

    ','  shift, and go to state 117


State 103

    7 S: T_PRINT '(' ITEM ')' T_NL . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 118
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 104

   14 WHILE: T_WHILE N $@2 '(' N . COND N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    COND  go to state 119
    K     go to state 108
    L     go to state 19
    M     go to state 20
    O     go to state 21
    NUM   go to state 22
    ID    go to state 109


State 105

   93 FID: T_ID .

    $default  reduce using rule 93 (FID)


State 106

   18 FOR: T_FOR N '(' N FID . T_IN RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

    T_IN  shift, and go to state 120


State 107

   20 IF: T_IF N '(' N COND . N ')' $@8 N T_CO NIF

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 121


State 108

   30 COND: K . RELOP K
   32     | K . LOGICOP K
   33     | K .
   35 K: K . T_ADD @12 L
   37  | K . T_SUB @13 L

    T_ADD  shift, and go to state 38
    T_SUB  shift, and go to state 39
    T_GT   shift, and go to state 40
    T_LT   shift, and go to state 41
    T_AND  shift, and go to state 122
    T_OR   shift, and go to state 123
    T_LE   shift, and go to state 42
    T_GE   shift, and go to state 43
    T_EE   shift, and go to state 44
    T_NE   shift, and go to state 45

    $default  reduce using rule 33 (COND)

    RELOP    go to state 124
    LOGICOP  go to state 125


State 109

   31 COND: ID . ASSIGNOP K
   49 O: ID .
   52  | ID . '[' INDEX ']'

    T_EQ  shift, and go to state 51
    T_RA  shift, and go to state 52
    T_LA  shift, and go to state 53
    '['   shift, and go to state 54

    $default  reduce using rule 49 (O)

    ASSIGNOP  go to state 126


State 110

    8 S: T_CO N S T_CC T_NL . S

    error    shift, and go to state 4
    T_PRINT  shift, and go to state 5
    T_WHILE  shift, and go to state 6
    T_FOR    shift, and go to state 7
    T_IF     shift, and go to state 8
    T_NUM    shift, and go to state 9
    T_ID     shift, and go to state 10
    T_CO     shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 10 (S)
    T_CC  reduce using rule 10 (S)

    S      go to state 127
    WHILE  go to state 14
    FOR    go to state 15
    IF     go to state 16
    EXP    go to state 17
    K      go to state 18
    L      go to state 19
    M      go to state 20
    O      go to state 21
    NUM    go to state 22
    ID     go to state 23


State 111

   26 EXP: K RELOP K $@10 T_NL .

    $default  reduce using rule 26 (EXP)


State 112

   53 INDEX: NUM ',' INDEX .

    $default  reduce using rule 53 (INDEX)


State 113

   54 INDEX: ID ',' INDEX .

    $default  reduce using rule 54 (INDEX)


State 114

   28 EXP: ID ASSIGNOP K $@11 T_NL .

    $default  reduce using rule 28 (EXP)


State 115

   82 PASTE: T_PASTEO '(' PASTEIN ')' .

    $default  reduce using rule 82 (PASTE)


State 116

   83 PASTEIN: STR ',' . PASTEIN

    T_STR  shift, and go to state 60
    T_ID   shift, and go to state 10

    $default  reduce using rule 85 (PASTEIN)

    PASTEIN  go to state 128
    STR      go to state 101
    ID       go to state 102


State 117

   84 PASTEIN: ID ',' . PASTEIN

    T_STR  shift, and go to state 60
    T_ID   shift, and go to state 10

    $default  reduce using rule 85 (PASTEIN)

    PASTEIN  go to state 129
    STR      go to state 101
    ID       go to state 102


State 118

    7 S: T_PRINT '(' ITEM ')' T_NL S .

    $default  reduce using rule 7 (S)


State 119

   14 WHILE: T_WHILE N $@2 '(' N COND . N ')' $@3 N T_CO N S T_CC $@4 T_NL

    T_NL  shift, and go to state 26

    $default  reduce using rule 87 (N)

    N  go to state 130


State 120

   18 FOR: T_FOR N '(' N FID T_IN . RANGE $@5 N ')' $@6 N T_CO N S T_CC $@7 T_NL

    T_NUM      shift, and go to state 131
    T_ID       shift, and go to state 10
    T_COPEN    shift, and go to state 132
    T_SEQOPEN  shift, and go to state 133

    RANGE  go to state 134
    NUMC   go to state 135
    ID     go to state 136


State 121

   20 IF: T_IF N '(' N COND N . ')' $@8 N T_CO NIF

    ')'  shift, and go to state 137


State 122

   66 LOGICOP: T_AND .

    $default  reduce using rule 66 (LOGICOP)


State 123

   67 LOGICOP: T_OR .

    $default  reduce using rule 67 (LOGICOP)


State 124

   30 COND: K RELOP . K

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    K    go to state 138
    L    go to state 19
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 125

   32 COND: K LOGICOP . K

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12

    K    go to state 139
    L    go to state 19
    M    go to state 20
    O    go to state 21
    NUM  go to state 22
    ID   go to state 32


State 126

   31 COND: ID ASSIGNOP . K

    T_NUM  shift, and go to state 9
    T_ID   shift, and go to state 10
    '('    shift, and go to state 12
